<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">medical-application</string>
    <string name="full">full name</string>
    <string name="passee">password</string>
    <string-array name="Sp_sex">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="Sp_blood_types">
        <item>A+</item>
        <item>O+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>A-</item>
        <item>O-</item>
        <item>B-</item>
        <item>AB-</item>
        <item>Other</item>
    </string-array>
    <string name="app_name2">Sign Up</string>
    <string name="name">الاسم:</string>
    <string name="hint1">الاسم بالكامل</string>
    <string name="address2">العنوان:</string>
    <string name="hint2">العنوان</string>
    <string name="phone2">رقم الهاتف:</string>
    <string name="hint3">رقم الهاتف</string>
    <string name="info">معلومات خاصة بالجهة:</string>
    <string name="hint4">عدد سيارات الاسعاف</string>
    <string name="hint5">عدد السراير</string>
    <string name="hint6">عدد غرف العناية</string>
    <string name="bttn0">انشاء حساب</string>
    <string name="getloc">الحصول علي المكان</string>
    <string name="amp_1">الإسعاف</string>
    <string name="amp_num">123</string>
    <string name="fire_2">المطافي</string>
    <string name="fire_num">180</string>
    <string name="pol_3">النجدة</string>
    <string name="pol_num">122</string>
    <string name="acc_4">حوادث الطرق السریعة</string>
    <string name="acc_num">012111000</string>
    <string name="add_5">مكافحة الإدمان</string>
    <string name="add_num">16023</string>
    <string name="hea_6">طوارئ الصحة</string>
    <string name="hea_num">137</string>
    <string name="med_7">الطب الوقائي</string>
    <string name="med_num">105</string>
    <string name="app_name3">بنك الدم</string>
    <string name="text_1">البحث عن طريق فصيلة الدم</string>
    <string name="text_2">البحث عن طریق :</string>
    <string name="text_4">أبلغ المستخدم</string>
    <string name="text_6">العنوان</string>
    <string name="text_7">الاسم بالكامل</string>
    <string name="text_8">رقم الهاتف</string>
    <string name="text_9">فصيلة الدم</string>
    <string name="text_10">تسجيل</string>
    <string-array name="spinner">
        <item>- إختر -</item>
        <item>الإسم</item>
        <item>فصیلة الدم</item>
        <item>العنوان</item>
    </string-array>
    <string name="fa_name">First Aid</string>
    <string name="item_title_takef">Ambulatory education and awareness</string>
    <string name="item_title_ksoor">Fractures, trauma, and dislocations</string>
    <string name="item_title_ekhtnak">Airway obstruction (choking)</string>
    <string name="item_title_darbetshams">Heat stroke</string>
    <string name="item_title_ghark">Drowning</string>
    <string name="item_title_enashkalby">Cardiopulmonary resuscitation</string>
    <string name="item_title_momdadalaelard">Quick check</string>
    <string name="item_title_rabw">Asthma and acute asthma</string>
    <string name="item_title_reaf">What do I do if I find someone who has nosebleeds?</string>
    <string name="item_title_saktademaghia">brain attack</string>
    <string name="item_title_saraa">Epilepsy</string>
    <string name="item_title_tasmom">Intoxication</string>
    <string name="item_title_yanzefbaghzara">How do I rescue someone who has a large open wound that bleeds profusely?</string>
    <string name="item_title_azmakalbia">Heart attacks</string>
    <string name="item_title_hrook">Burns</string>
    <string name="item_title_sokary">Emergency emergency cases</string>
    <string name="item_disc_sokary">Diabetes and diabetic coma</string>
    <string name="item_disc_taskef">Do I examine the injured and provide him with emergency emergency care on his site? ... </string>
    <string name="item_disc_sakta">Six brain means damage to cells or nerve centers ...</string>
    <string name="item_disc_azma">Heart attacks, many of them stroke, where the patient breathing stops ...</string>
    <string name="item_disc_rabw">What is asthma?</string>
    <string name="item_disc_saraa">It is a benign disease that results from normal and temporary intrusive behavior by the electrical nerve pathway ...</string>
    <string name="item_dis_cynzef">How do I rescue an injured person who has a large open wound that bleeds profusely?</string>
    <string name="item_disc_reaf">What do I do if I find someone has nosebleeds (nosebleeds)</string>
    <string name="item_disc_ksoor">How do I know that the leg or arm bones are broken?</string>
    <string name="item_disc_hrook">What are the types of burns?</string>
    <string name="item_disc_ghark">What do I do if I see someone wrestling with drowning in the sea or in the swimming pool?</string>
    <string name="item_disc_tasmom">What is poisoning?</string>
    <string name="t_21">heart attacks</string>
    <string name="t_22">Heart attacks are many, including thrombosis (myocardial infarction) which occurs as a result of a total blockage in one or more arteries of the coronary arteries that feed the heart muscle with oxygen and food, including angina that occurs as a result of coronary arteries and a decrease in blood flow in it, which causes severe pain </string>
    <string name="t_23">What do you do if you find someone with severe chest pain? </string>
    <string name="t_24">First: - For angina. </string>
    <string name="t_25">The pain caused by angina is severe, and its effects may extend to many organs of the body and the characteristics of pain are as follows:  </string>
    <string name="t_26">1.It happens after a muscular effort (climbing stairs, exercising) or a psychological effort (intense emotion).</string>
    <string name="t_27">2.الم ضاغط او احساس بوجود ثقل علي وسط الصدر</string>
    <string name="t_28">3.قد يمتد الألم الي الكتف الأيسر ، داخل الذراع الأيسر و اصابع اليد اليسري ، الرقبه ، الفك السفلي بين عضمتين اللوح بظهر المريض </string>
    <string name="t_29">4.يستمر الألم ما بين (5-10 دقائق)</string>
    <string name="t_210">5.يتحسن الألم بالراحه او باخذ حبوب تحت اللسان المصوفه من قبل الطبيب</string>
    <string name="t_211">ثانيا:-الجلطة(احتشاء عضلة القلب)</string>
    <string name="t_212">الألم المصاحب للجلطه له صفات خاصه منها:-</string>
    <string name="t_214">.قد يحدث فجأه دون مسببات او دون جهد قبله </string>
    <string name="t_215">.ضاغط وسط الصدر   </string>
    <string name="t_216">.شديد الحده   </string>
    <string name="t_217">كيف أسعف المريض؟  </string>
    <string name="t_218">1.اتصل علي رقم 123(الاسعاف)   </string>
    <string name="t_219">2.طمئن المرض وهدئ من روعه ولا تسمح له بالحركة   </string>
    <string name="t_220">3.اخلع عن المرض ملابسه الضيقه وفك ازرار الرقبة ورباط عنقه ان وجد  </string>
    <string name="t_221">4.ساعد المرض علي اخذ حبوب تحت اللسات الموصوفه من قبل الطبيب اذا كان ما يعانيه المريض هو علامات الذبحه الصدريه    </string>
    <string name="t_41">Airway obstruction (choking or choking)</string>
    <string name="t_42">الاختناق هو احد الحالات المهدده للحياه ، حيث يتوقف التنفس للمصاب ويحدث اعاقه لدخول وخروج الهواء الي رئتيه  </string>
    <string name="t_43">كيف اتصرف اذا تأكدت ان هناك شخصا مصابا بانسداد مجري الهواء:</string>
    <string name="t_44">You have to determine first whether the blockage is simple or severe.</string>
    <string name="t_45">اذا كان الانسداد بسيطا فان المصاب يعني:</string>
    <string name="t_46">-سعالا مستمرا</string>
    <string name="t_47">-حشرجه وخشونه فالصوت</string>
    <string name="t_48">سماع صوت زفيرا او ازيزا عند دخول وخروج الهواء</string>
    <string name="t_49">ماذا افعل لانقاذه:</string>
    <string name="t_410">.لا تتدخل شجعة علي الاستمرار في السعال حتي يخرج الجسم الغريب من الفم </string>
    <string name="t_411">.راقبه جيدا وكن مستعدا للتدخل في حالة فقدان الوعي</string>
    <string name="t_412">اذا كان الانسداد شديدا فان المصاب يعاني من:</string>
    <string name="t_413">-عدم وجود سعال او حشرجه او صوت صفير او ازيز عند دخول وخروج الهواء </string>
    <string name="t_414">عدم القدره علي الكلام </string>
    <string name="t_415">صعوبة شديده فالتنفس مع وجود زرقة في لون الجلد</string>
    <string name="t_416">الميل لفقدان الوعي</string>
    <string name="t_417">ماذا افعل كي اتاكد ان الانسداد شديدا؟</string>
    <string name="t_418">.قم بهز المصاب من كتفيه بقوة واسأله بصوت مرتفع :هل انت مختنق؟ فاذا حرك رأسه لأعلي و للاسفل فهذا يعني انه (نعم) في طور الاختناق</string>
    <string name="t_419">مناورة هيميلك للبالغين:</string>
    <string name="t_420">قف خلف المختنق ولف ذراعيك حول وسطه من تحت ابطيه وثبت احدي يديك وهي مقبوضه علي بطنه فوق السره واسفل عضمة القص</string>
    <string name="t_421">.اقبض الآخري علي اليد المضغوطه علي البطن باحكام</string>
    <string name="t_422">قم بعمل دفعات سريعه علي بطن المختنق بكلتا يديك بحيث تكون الدفعات للأعلي والي الداخل(الخلف)</string>
    <string name="t_423">.استمر في عمل الدفعات البطنيه حتي يخرج الجسم الغريب من فمه او يفقد المختنق وعيه</string>
    <string name="t_424">.اثناء عمل الدفعات البطنيه ضع احدي ساقيك بين ساقي المختنق من الخلف حتي لا يسقط علي الارض عند فقدان وعيه</string>
    <string name="t_425">ماذا افعل اذا انتهيت من عمل خمس دورات من الانعاش القلبي؟</string>
    <string name="t_426">.بعد الانتهاء من 5 دورات (كل دوره تشمل 30 ضغطه صدريه ثم نفسين انقاذيين) لمده دقيقتين ابحث عن علامات وجود الحياه مثل التنفس او السعال </string>
    <string name="t_427">.اذا لم توجد علامات وجود الحياه كرر الخطوات السابقه حتي خخروج الجسم الغريب من الفم لحين وصول فني اسعاف الخدمات الطبيه الطارئه</string>
    <string name="t_428">ماذا افعل اذا اصبح الرضيع المختنق فاقد الوعي اقل من سنه؟</string>
    <string name="t_429">1.اذا تأكدت ان الرضيع فاقد الوعي استخدم الأسلوب المتبع نفسه في انقاذ البالغ المختنق الذي فقد وعيه اثناء انقاذه مع مراعاة التالي:- </string>
    <string name="t_430">2. ضع الرضيع علي الارض مستلقيا علي ظهره</string>
    <string name="t_431">3. افتح الفم وانظر داخله للبحث عن وجود الجسم الغريب ، اذا رايته حاول اخراجه</string>
    <string name="t_432"> 4.وان لم تره افتح مجري الهواء بطريقه امالة الرأس ورفع الذقن</string>
    <string name="t_433">5.اعط الرضيع تنفسا انقاذيا لمده ثانيه مع ملاحظة ارتفاع الصدر اثناء اعطاء التنفس</string>
    <string name="t_434">6.اذا لم يرتفع الصدر افتح فم المصاب مرة اخري وابحث عن الجسم الغريب ولا تحاول اخراجه الا عند رؤيته فقط </string>
    <string name="t_435">7.اعد فتح مجري الهواء بطريقة امالة الرأس ورفع الذقن</string>
    <string name="t_436">8.اعط الرضيع تنفسا انقاذيا مرة اخري لمده ثابته مع ملاحظة ارتفاع الصدر اثتاء اعطاء التنفس ، اذا لم يرتف الصدر قم بعمل انعاش للقلب الرئوي كما في الرضع اقل من سنه </string>
    <string name="t_437">-اتصل علي رقم 123(الاسعاف) ثم استمر في عمل الخطوات السابقه حتي وصول المسعفين</string>
    <string name="t_438">ماذا افعل اذا كان المختنق رضيعا واعيا اقل من سنه؟</string>
    <string name="t_439">لاحظ صعوبة التنفس لدي الرضيع مع تغيير لون الجلد والشفتين الي الزرقه للتأكد من انسداد مجلري الهواء بجسم غريب ثم :</string>
    <string name="t_440">بالنسبة الي الرضع:</string>
    <string name="t_441">1.ثبت رأس الرضيع علي كف يدك ورأسه للأرض وصدره ممددا علي ساعدك بحيث يكون رأسه الي اسفل مستوي الجذع حيث ان الجاذبيه الأرضيه تساعد علي جذب الجسم الغريب الي الاسفل </string>
    <string name="t_442">2.ارح ساعدك الذي يحمل الرضيع علب فخذيك</string>
    <string name="t_443">3.باستخدام كف الاخري اضرب الرضيع خمس ضربات متتاليه بين لوحي كتفيه</string>
    <string name="t_444">4.اقلب الرضيع المختنق بحيث يكون ظهره مستندا علي ساعدك الآخر مع المحافظه علي جعل الرأس في مستوي اسفل من الجذع</string>
    <string name="t_445">5.باستخدام طرفي الاصبعين (الوسطي والسبابه)اضغط علي وسط عظم القص بين الحلمتين</string>
    <string name="t_446">كرر الخطوات السابقه حتي خروج الجسم الغريب وبدء الرضيع في الصياح او فقد الرضيع وعيه </string>
    <string name="for_more_information_watch_the_video">For more information watch the video</string>
    <string name="heartattacks_link" translatable="false">
        <a href="http://youtu.be/KnVogagd0oo"> http://youtu.be/KnVogagd0oo </a>
    </string>
</resources>