<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".airwayobstruction">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".login"
        android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/bbbblue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/ic_wave3"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        android:layout_marginTop="-125dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        app:cardCornerRadius="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:id="@+id/t_41"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/t_41"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/bbbblue"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/t_42"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_42"
            android:textColor="@android:color/black"
            android:padding="8dp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/iV_2"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:srcCompat="@drawable/h7" />
        <TextView
            android:id="@+id/t_43"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/t_43"
            android:textColor="@color/bbbblue"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/t_44"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_44"
            android:textColor="@android:color/black"
            android:padding="8dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/t_45"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/t_45"
            android:textColor="@color/bbbblue"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/t_46"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_46"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_47"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_47"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_48"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_48"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_49"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/t_49"
            android:textColor="@color/bbbblue"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/t_410"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_410"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_411"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_411"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_412"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_412"
            android:textColor="@color/bbbblue"
            android:textStyle="bold"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_413"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_413"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_414"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_414"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_415"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_415"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_416"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_416"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_417"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_417"
            android:textColor="@color/bbbblue"
            android:textStyle="bold"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_418"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_418"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <ImageView
            android:id="@+id/iV_"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:srcCompat="@drawable/h5" />
        <TextView
            android:id="@+id/t_419"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_419"
            android:textColor="@color/bbbblue"
            android:textStyle="bold"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_420"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_420"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_421"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_421"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_422"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_422"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_423"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_423"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_424"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_424"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_425"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_425"
            android:textColor="@color/bbbblue"
            android:textStyle="bold"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_426"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_426"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_427"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_427"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_438"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_438"
            android:textColor="@color/bbbblue"
            android:textStyle="bold"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_439"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_439"
            android:textColor="@android:color/black"
            android:padding="8dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/t_440"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_440"
            android:textColor="@android:color/black"
            android:padding="8dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/t_441"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_441"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_442"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_442"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_443"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_443"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_444"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_444"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_445"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_445"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_446"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_446"
            android:textColor="@android:color/black"
            android:padding="8dp"/>

        <ImageView
            android:id="@+id/iV"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:srcCompat="@drawable/h6" />
        <TextView
            android:id="@+id/t_428"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_428"
            android:textColor="@color/bbbblue"
            android:textStyle="bold"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_429"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_429"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_430"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_430"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_431"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_431"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_432"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_432"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_433"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_433"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_434"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_434"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_435"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_435"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_436"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_436"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_437"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_437"
            android:textColor="@android:color/black"
            android:padding="8dp"/>


    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</ScrollView>