<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".FirstAid.heartattacks">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/bbbblue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/ic_wave3"/>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        android:layout_marginTop="-125dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        app:cardCornerRadius="30dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/t_21"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/t_21"
            android:textColor="@color/bbbblue"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="20sp"/>
        <ImageView
            android:id="@+id/iV_2"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            app:srcCompat="@drawable/h1" />
        <TextView
            android:id="@+id/t_22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_22"
            android:textColor="@android:color/black"
            android:padding="8dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/t_23"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/t_23"
            android:textColor="@color/bbbblue"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/t_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/t_24"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_25"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_26"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_27"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_28"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_29"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_210"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_210"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_211"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/t_211"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_212"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_212"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_214"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_214"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_215"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_215"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_216"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_216"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_217"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/t_217"
            android:textColor="@color/bbbblue"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/t_218"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_218"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_219"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_219"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_220"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_220"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_221"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/t_221"
            android:textColor="@android:color/black"
            android:padding="8dp"/>
        <TextView
            android:id="@+id/t_2172"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/for_more_information_watch_the_video"
            android:textColor="@color/bbbblue"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/heartattacks_link"
            android:id="@+id/textview"/>



    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</ScrollView>